--- a/css/main.css
+++ b/css/main.css
@@ -463,6 +463,11 @@ img {
 }
 
 .page-header {
+  position: relative;
+  width: 100%;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   border-bottom: #e5e5e5 1px solid;
   background: #ffffff;
 }
@@ -470,44 +475,44 @@ img {
 .page-header__flex {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  font-weight: 500;
+  letter-spacing: 0.02em;
 }
 
-.logo {
-  display: flex;
-  align-items: center;
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  color: #2196f3;
+@media screen and (max-width: 767px) {
+  .page-header__flex {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 }
 
-.logo--header {
-  color: #000000;
+@media screen and (max-width: 767px) {
+  .control-container {
+    display: none;
+  }
 }
 
-.logo--footer {
-  color: #ffffff;
-}
-
-.nav {
-  display: flex;
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .control-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin-left: 88px;
+  }
 }
 
 .nav__list {
   display: flex;
   align-items: center;
-  margin-left: 93px;
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 
 .nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.nav__link {
+.nav .nav__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -519,7 +524,7 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav__link:hover, .nav__link:focus {
+.nav .nav__link:hover, .nav .nav__link:focus {
   color: #2196f3;
 }
 
@@ -541,35 +546,102 @@ img {
 
 .contacts-header {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   margin-left: auto;
 }
 
-.contacts-header__icon {
+@media screen and (min-width: 1200px) {
+  .contacts-header {
+    flex-wrap: nowrap;
+  }
+}
+
+.contacts-header__icon-mail {
   margin-right: 10px;
   fill: currentColor;
+  width: 14px;
+  height: 10px;
 }
 
-.contacts-header__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .contacts-header__icon-mail {
+    width: 16px;
+    height: 12px;
+  }
 }
 
-.contacts-header__link {
+.contacts-header__icon-tel {
+  margin-right: 10px;
+  fill: currentColor;
+  width: 10px;
+  height: 14px;
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-header__icon-tel {
+    height: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts-header .mail-header {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-header .mail-header {
+    margin-right: 30px;
+  }
+}
+
+.contacts-header .contacts-header__link {
   display: flex;
-  align-items: center;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  font-size: 12px;
+  line-height: 1.16;
   color: #757575;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-header__link:hover, .contacts-header__link:focus {
+@media screen and (min-width: 1200px) {
+  .contacts-header .contacts-header__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-size: 14px;
+    line-height: 1.14;
+  }
+}
+
+.contacts-header .contacts-header__link:hover, .contacts-header .contacts-header__link:focus {
   color: #2196f3;
+}
+
+.logo {
+  padding: 26px 0;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  color: #2196f3;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
+}
+
+.logo--header {
+  color: #000000;
+}
+
+.logo--footer {
+  color: #ffffff;
 }
 
 .section-title {
@@ -963,7 +1035,6 @@ img {
   align-items: center;
   width: calc((100% - 30px) / 2);
   height: 90px;
-  margin-top: 30px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -975,7 +1046,6 @@ img {
 @media screen and (min-width: 1200px) {
   .clients__item {
     width: calc((100% - 150px) / 6);
-    margin-top: 50px;
   }
 }
 
@@ -1009,20 +1079,67 @@ img {
 }
 
 .page-footer {
+  padding: 60px 0;
+  text-align: center;
   background-color: #2f303a;
 }
 
-.page-footer__flex {
-  display: flex;
-  align-items: center;
+@media screen and (min-width: 1200px) {
+  .page-footer {
+    text-align: left;
+  }
 }
 
-.page-footer__requisites {
-  width: 231px;
-  margin-right: 70px;
+@media screen and (min-width: 768px) {
+  .page-footer__flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: baseline;
+  }
 }
 
-.page-footer__requisites .page-footer__address {
+@media screen and (min-width: 1200px) {
+  .page-footer {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+}
+
+.page-footer__widget {
+  width: 100%;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .page-footer__widget {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .page-footer__widget:not(:last-child) {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .page-footer__widget:not(:last-child) {
+    width: calc((50% - 45px) / 2);
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .page-footer__widget:nth-last-child(1) {
+    width: calc(50% - 15px);
+    margin-right: 30px;
+    margin-right: auto;
+  }
+}
+
+.page-footer__address {
   margin-top: 20px;
   font-style: normal;
   font-weight: 400;
@@ -1048,12 +1165,6 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.join {
-  width: 206px;
-  padding-top: 72px;
-  padding-bottom: 100px;
-}
-
 .join__text {
   margin-bottom: 20px;
   font-weight: 700;
@@ -1068,6 +1179,12 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .join__list {
+    justify-content: flex-start;
+  }
 }
 
 .join__item:not(:last-child) {
@@ -1094,13 +1211,6 @@ img {
   background-color: #2196f3;
 }
 
-.subscription {
-  width: 570px;
-  margin-left: auto;
-  padding-top: 72px;
-  padding-bottom: 94px;
-}
-
 .subscription__text {
   margin-bottom: 20px;
   font-weight: 700;
@@ -1115,16 +1225,21 @@ img {
 }
 
 .subscription__form {
-  display: flex;
-  align-items: center;
+  display: block;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription__form {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .subscription__input {
-  width: 358px;
-  margin-right: 12px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 16px;
+  display: flex;
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 15px 16px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -1134,12 +1249,32 @@ img {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+  transition-property: border-color, outline-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .subscription__input {
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription__input {
+    width: 358px;
+    margin-bottom: 0;
+    margin-right: 12px;
+  }
 }
 
 .subscription__button {
   display: flex;
   align-items: center;
-  padding: 10px 29px;
+  margin: 0 auto;
+  padding: 10px 28px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
