--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,14 +1,17 @@
 // Лого
 .logo {
-  display: flex;
-  align-items: center;
+  padding: 26px 0;
   font-family: $sec-font;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
 
   color: #2196f3;
 
+  @media screen and (min-width: $desktop) {
+    font-size: 26px;
+  line-height: 1.19;
+  }
   // Лого-хедер
   &--header {
     color: #000000;
