--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -1,9 +1,219 @@
 .page-footer {
+  padding: 60px 0;
+
+  text-align: center;
+
   background-color: $footer-background-color;
 
+  @media screen and (min-width: $desktop) {
+    text-align: left;
+  }
 
   &__flex {
+    @media screen and (min-width: $tablet) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      align-items: baseline;
+    }
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+}
+
+.page-footer__widget {
+  width: 100%;
+  margin-bottom: 60px;
+
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 0;
+  }
+
+  &:not(:last-child) {
+    @media screen and (min-width: $tablet) {
+      width: 50%;
+    }
+    @media screen and (min-width: $desktop) {
+      width: calc((50% - 45px) / 2);
+      margin-right: 30px;
+    }
+  }
+
+  &:nth-last-child(1) {
+    @media screen and (min-width: $desktop) {
+      width: calc(50% - 15px);
+      margin-right: 30px;
+      margin-right: auto;
+    }
+  }
+}
+
+// Реквизиты
+// .page-footer__requisites {
+//   width: 231px;
+// }
+//  Адрес
+.page-footer__address {
+  margin-top: 20px;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: #ffffff;
+}
+
+// Контакты футер
+.contacts-footer {
+  margin-top: 9px;
+
+  &__item:not(:first-child) {
+    margin-top: 9px;
+  }
+
+  &__link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+
+    color: rgba(255, 255, 255, 0.6);
+  }
+}
+
+.join {
+  
+  &__text {
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: #ffffff;
+  }
+
+  &__list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media screen and (min-width: $desktop) {
+      justify-content: flex-start;
+    }
+
+  }
+  &__item:not(:last-child) {
+    margin-right: 10px;
+  }
+
+  &__link {
     display: flex;
     align-items: center;
+    padding: 12px;
+
+    border-radius: 50%;
+    color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.1);
+
+    @include transition(background-color);
+  }
+
+  &__icon {
+    fill: currentColor;
+  }
+
+  &__link:hover,
+  &__link:focus {
+    background-color: $accent-color;
+  }
+}
+
+.subscription {
+  &__text {
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: #ffffff;
+
+    @include transition(border);
+  }
+
+  &__form {
+    display: block;
+    @media screen and (min-width: $desktop) {
+      display: flex;
+      align-items: center;
+    }
+  }
+
+  &__input {
+    display: flex;
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 15px 16px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+
+    color: rgba(255, 255, 255, 0.6);
+    background-color: $footer-background-color;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+
+    @include transition(border-color, outline-color);
+
+    @media screen and (min-width: $tablet) {
+      width: 450px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    @media screen and (min-width: $desktop) {
+      width: 358px;
+      margin-bottom: 0;
+      margin-right: 12px;
+    }
+  }
+
+  &__button {
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    padding: 10px 28px;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+
+    text-align: center;
+    letter-spacing: 0.06em;
+
+    color: #ffffff;
+
+    background: #2196f3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border: transparent;
+    border-radius: 4px;
+
+    cursor: pointer;
+  }
+
+  &__icon {
+    margin-left: 10px;
   }
 }
