--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,10 +1,151 @@
 // Хедер
 .page-header {
+  position: relative;
+  width: 100%;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   border-bottom: #e5e5e5 1px solid;
   background: $pri-background-color;
 
   &__flex {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    font-weight: 500;
+    letter-spacing: 0.02em;
+
+    @media screen and (max-width: 767px) {
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+  }
+}
+
+.control-container {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin-left: 88px;
+  }
+}
+// Главная навигация
+.nav {
+  &__list {
+    display: flex;
+    align-items: center;
+  }
+
+  &__item:not(:last-child) {
+    margin-right: 50px;
+  }
+
+  .nav__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    color: $pri-text-color;
+
+    @include transition(color);
+
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
+  }
+}
+.nav__link--current {
+  position: relative;
+  color: $accent-color;
+
+  &::after {
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+
+    content: "";
+    width: 100%;
+    height: 4px;
+
+    background-color: $accent-color;
+    border-radius: 2px;
+  }
+}
+
+// Контакты
+.contacts-header {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-left: auto;
+  
+  @media screen and (min-width: $desktop) {
+    flex-wrap: nowrap;
+  }
+
+  &__icon-mail {
+    margin-right: 10px;
+    fill: currentColor;
+
+    width: 14px;
+    height: 10px;
+
+    @media screen and (min-width: $desktop) {
+      width: 16px;
+      height: 12px;
+    }
+  }
+
+  &__icon-tel {
+    margin-right: 10px;
+    fill: currentColor;
+    width: 10px;
+    height: 14px;
+
+    @media screen and (min-width: $desktop) {
+      height: 16px;
+    }
+  }
+
+  .mail-header {
+    @media screen and (min-width: $tablet) and (max-width: 1199px) {
+      margin-bottom: 10px;
+    }
+    @media screen and (min-width: $desktop) {
+      margin-right: 30px;
+    }
+  }
+
+  .contacts-header__link {
+    display: flex;
+    
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.16;
+
+    color: $sec-text-color;
+
+    @include transition(color);
+
+    @media screen and (min-width: $desktop) {
+      padding-top: 32px;
+      padding-bottom: 32px;
+
+      font-size: 14px;
+      line-height: 1.14;
+    }
+
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
   }
 }
